<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <ListPreference android:key="theme_select"
            android:title="Choose Theme for app"
            android:summary="Choose wisely"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_names"
            />
        <ListPreference android:key="base_theme"
            android:entries="@array/base_theme"
            android:entryValues="@array/base_theme"
            android:title="Choose Base Theme"
            android:summary="Background colour"/>
        <SwitchPreference
            android:title="Use Picture Background"
            android:key="pic_bg"
            android:defaultValue="true"
            />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>

        <Preference
            android:title="Check for Updates"
            android:summary="Check if new Version is Available"
            android:key="update"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="@string/myfb"
            android:summary="@string/myfb2"
            android:key="myfb"
            android:icon="@drawable/myfb"
            />
        <Preference
            android:title="@string/myxda"
            android:summary="@string/myxda2"
            android:key="myxda"
            android:icon="@drawable/myxda"
            />
        <Preference
            android:title="@string/myinsta"
            android:summary="@string/myinsta2"
            android:key="myinsta"
            android:icon="@drawable/myinsta"
            />
        <Preference
            android:title="@string/mywa"
            android:summary="@string/mywa2"
            android:key="mywa"
            android:icon="@drawable/mywa"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="Other">
        <Preference
            android:title="@string/help"
            android:summary="@string/help2"
            android:key="help"
            android:icon="@drawable/help"
            />
        <Preference
            android:title="@string/donate"
            android:summary="@string/donate2"
            android:key="donate"
            android:icon="@drawable/donate"
            />

    </PreferenceCategory>
    <PreferenceCategory android:title="About App">
        <Preference
            android:title="Version"
            android:summary="Version 1.0"
            android:key="version"
            />
        <Preference
            android:title="Release Date"
            android:summary="14th January 2016"
            android:key="rel_date"
            />

    </PreferenceCategory>
</PreferenceScreen>
